-
Bug
-
Resolution: Done
-
P2: Important
-
4.8.3
-
None
-
Windows 7 x64
vs2010
-
62e9682abecaf7e38f6dd9640a3aa964bdd21d0d
Drag and drop for a widget which has native child widgets has broken duo to Commit f6bf4b2baa91e55f40596bf3f2823b119fdfa5e0
Run the attached sample program, press mouse button in any non-child widget area in the top level widget will start drag, move the cursor to the push button or the GL widget you will see the drop is forbidden, this behavoiur is not correct.
This bug was introduced in Commit f6bf4b2baa91e55f40596bf3f2823b119fdfa5e0, since there is a GL widget in the top level widget, it will make its sibling widget (the push button) become a native widget, and due to the change in this Commit ,this native widget will register its own drop target object in QWidgetPrivate::registerOleDnd() using RegisterDragDrop() and also due to the change in commit 54334ca2e51ec43a07872c8b5861e5900d6b6cbb, when mouse is over the push button widget, QOleDropTarget::DragOver() will select the push button as the dragOverWidget widget which broken Dnd.