Fix Drag and Drop with Native Widgets

Task-number: QTBUG-27265

Don't check "dragOverWidget != widget" in QOleDropTarget::DragOver()
because if the dropsite widget's parent widget is the drop target this
check will prevent its parent widget receive drag over event and the dnd
cursor indicator is also wrong.
We replace the check with "!dragOverWidget->isWindow()" to prevent pass
through a window.

A similar issue in Qt5 beta has been fixed by
https://codereview.qt-project.org/#change,35646

Change-Id: I9e18b71bd7f3ee244db61571811c51dc16b341d2
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@digia.com>
Reviewed-by: Marc Mutz <marc.mutz@kdab.com>